# src/controllers.ts
@@ -1,7 +1,11 @@
+import { CommentsController } from "./Services/Comments/CommentsController";
+import { PostsController } from "./Services/Posts/PostsController";
 import { AuthController } from "./Services/Users/AuthController";
 import { UsersController } from "./Services/Users/UsersController";
 
 export {
   UsersController,
   AuthController,
+  PostsController,
+  CommentsController,
 };
